apps/base/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
  labels:
    app.kubernetes.io/name: tautulli
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8181
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: tautulli
