apps/base/tautulli/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli
  namespace: tautulli
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`tautulli-new.cruznet.io`)
    kind: Rule
    services:
    - name: tautulli
      kind: Service
      port: 8181
  tls:
    secretName: tautulli-cert
